<resources>
    <string name="app_name">My Movies App</string>
    <string name="lgIniciar">Iniciar sesión</string>
    <string name="lgCorreo">Correo electrónico</string>
    <string name="lgPassword">Contraseña</string>
    <string name="lgRegistro">Registrarse</string>
    <string name="lgBienvenido">Bienvenido</string>
    <string name="lgOlvidar">¿Olvidaste la contraseña?</string>
    <string name="rgTitulo">Registro</string>
    <string name="rgNombreCompleto">Nombre completo</string>
    <string name="rgCorreo">Correo electrónico</string>
    <string name="rgPassword">Contraseña</string>
    <string name="rgPasswordRepeat">Repetir contraseña</string>
    <string name="rgRegistro">Registrarse</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="image">Image</string>
    <string name="rgRegresar">Regresar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="fgSearchBuscar">Buscar películas o series …</string>
    <string name="fgSearchAction">Action</string>
    <string name="fgSearchAdventure">Adventure</string>
    <string name="fgSearchAnimation">Animation</string>
    <string name="fgSearchComedy">Comedy</string>
    <string name="fgSearchCrime">Crime</string>
    <string name="fgSearchDocumentary">Documentary</string>
    <string name="fgSearchDrama">Drama</string>
    <string name="fgSearchFamily">Family</string>
    <string name="fgSearchFantasy">Fantasy</string>
    <string name="fgSearchHistory">History</string>
    <string name="fgSearchHorror">Horror</string>
    <string name="fgSearchMusic">Music</string>
</resources>